// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableField default snapshot 1`] = `
<span
  className="editable-field"
>
  <a
    className="editable-field__preview"
    href=""
    onClick={[Function]}
  >
    Some value
  </a>
</span>
`;

exports[`EditableField edited snapshot 1`] = `
<span
  className="editable-field editable-field--edited"
>
  <input
    className="editable-field__input"
    onChange={[Function]}
    onKeyUp={[Function]}
    type="text"
    value="Some value"
  />
  <a
    className="editable-field__preview"
    href=""
    onClick={[Function]}
  >
    Some value
  </a>
  <span
    className="editable-field__icons"
  >
    <a
      className="editable-field__icon"
      href=""
      onClick={[Function]}
    >
      <i
        className="fa fa-check"
      />
    </a>
    <a
      className="editable-field__icon"
      href=""
      onClick={[Function]}
    >
      <i
        className="fa fa-close"
      />
    </a>
  </span>
</span>
`;
